--- a/build.gradle
+++ b/build.gradle
@@ -13,8 +13,8 @@ repositories {
 dependencies {
     testImplementation platform('org.junit:junit-bom:5.10.0')
     testImplementation 'org.junit.jupiter:junit-jupiter'
+    testImplementation 'org.mockito:mockito-core:3.9.0'
     implementation group: 'com.googlecode.lanterna', name: 'lanterna', version: '3.1.1'
-
 }
 
 test {
