--- a/build.gradle
+++ b/build.gradle
@@ -1,28 +1,35 @@
 plugins {
     id 'java'
     id 'application'
+    id 'info.solidsoft.pitest' version '1.6.0'
 }
 
-group = 'com.ldts.crystalclash'
-version = '1.0-SNAPSHOT'
+group 'com.aor.hero'
+version '1.0'
 
 repositories {
     mavenCentral()
 }
 
+pitest {
+    junit5PluginVersion = '0.12'
+}
+
+application {
+    mainClass.set('com.aor.hero.game.Game')
+}
+
 dependencies {
-    testImplementation platform('org.junit:junit-bom:5.10.0')
-    testImplementation 'org.junit.jupiter:junit-jupiter'
-    testImplementation 'org.mockito:mockito-core:5.6.0'
-    testImplementation 'org.mockito:mockito-junit-jupiter:5.6.0'
+    testImplementation 'org.junit.jupiter:junit-jupiter-api:5.6.0'
     testRuntimeOnly 'org.junit.jupiter:junit-jupiter-engine'
+    testImplementation 'org.mockito:mockito-core:3.7.7'
+    testImplementation 'net.jqwik:jqwik:1.5.1'
+
     implementation group: 'com.googlecode.lanterna', name: 'lanterna', version: '3.1.1'
 }
 
 test {
-    useJUnitPlatform()
-}
-
-application {
-    mainClass.set("com.ldts.crystalclash.Game")
+    useJUnitPlatform {
+        includeEngines('junit-jupiter', 'jqwik')
+    }
 }
