--- a/build.gradle
+++ b/build.gradle
@@ -1,6 +1,7 @@
 plugins {
     id 'java'
     id 'application'
+    id 'info.solidsoft.pitest' version '1.15.0'
 }
 
 group = 'com.ldts.crystalclash'
@@ -26,4 +27,8 @@ test {
 
 application {
     mainClass.set("com.ldts.crystalclash.Game")
+}
+
+pitest {
+    junit5PluginVersion = '1.2.1'
 }
