--- a/build.gradle
+++ b/build.gradle
@@ -2,6 +2,7 @@ plugins {
     id 'java'
     id 'application'
     id 'info.solidsoft.pitest' version '1.15.0'
+    id "net.ltgt.errorprone" version "4.1.0"
 }
 
 group = 'com.ldts.crystalclash'
@@ -18,7 +19,7 @@ dependencies {
     testImplementation 'org.mockito:mockito-junit-jupiter:5.6.0'
     testRuntimeOnly 'org.junit.jupiter:junit-jupiter-engine'
     implementation group: 'com.googlecode.lanterna', name: 'lanterna', version: '3.1.1'
-
+    errorprone "com.google.errorprone:error_prone_core:2.30.0"
 }
 
 test {
